Applying change for master-recursing-khayyam-planner-c084b537 for planner global_plan_per_static_rule